[package]
name = "bevy-geojson-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_pancam = { version = "0.16.0", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.13.0"
osmpbf = "0.3.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.217"
serde_json = "1.0.134"
ureq = "2.12.1"
web-sys = "0.3.72"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
