[package]
name = "bevy-geojson-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_egui = "0.32.0"
bevy_pancam = { version = "0.16.0", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.13.0"
bevy_tasks = "0.15.1"
crossbeam-channel = "0.5.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
rstar = "0.12.2"
serde = "1.0.217"
serde_json = "1.0.134"
ureq = "2.12.1"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
